clarified the "Run File" command

--- a/locale/en-US/filtaquilla.properties
+++ b/locale/en-US/filtaquilla.properties
@@ -8,7 +8,7 @@ filtaquilla.copyasread.name=Copy As Read
 filtaquilla.markunread.name=Mark As Unread
 filtaquilla.markreplied.name=Mark Replied
 filtaquilla.launchfile.name=Launch File
-filtaquilla.runfile.name=Run File
+filtaquilla.runfile.name=Run Program
 filtaquilla.trainasjunk.name=Train As Junk
 filtaquilla.trainasgood.name=Train As Good
 filtaquilla.mustSelectFolder=You must select a target folder
