--- a/locale/en-US/prefwindow.dtd
+++ b/locale/en-US/prefwindow.dtd
@@ -41,9 +41,14 @@
 <!ENTITY checkSubjectSuffixEnabled.accesskey "X">
 <!ENTITY checkJavascriptActionBodyEnabled.label "Javascript Action with Body">
 <!ENTITY checkJavascriptActionBodyEnabled.accesskey "Y">
-<!ENTITY optionsIntro "Enable items that you want available. Restart after changes.">
+<!ENTITY optionsIntro "Enable all items that you want to have available in the 'filter rules' dialog. Restart after changes.">
 <!ENTITY filterActions "Filter Actions">
 <!ENTITY searchTerms "Search Terms">
+<!ENTITY aboutAndSupport "About FiltaQuilla / Help">
+<!ENTITY supportPage "Visit Support Page">
+<!ENTITY supportPage_desc "This Page describes the different actions and conditions you can add to mail filters with FiltaQuilla.">
+<!ENTITY quickFiltersPage "Get quickFilters!">
+<!ENTITY quickFiltersPage_desc "Download this awesome Add-on to turbo-charge your filtering. quickFilters makes filter definition and management a breeze.">
 <!-- search terms -->
 <!ENTITY checkSearchBccEnabled.label "Bcc">
 <!ENTITY checkSearchBccEnabled.accesskey "B">
