--- a/locale/de/filtaquilla.properties
+++ b/locale/de/filtaquilla.properties
@@ -14,6 +14,7 @@ filtaquilla.trainasgood.name=Als kein Junk kategorisieren
 filtaquilla.mustSelectFolder=Bitte ein Verzeichnis auswählen
 filtaquilla.subjectregex.name=Betreff Vergleichen (Regulärer Ausdruck)
 filtaquilla.headerregex.name=Header Vergleichen (Regulärer Ausdruck)
+filtaquilla.attachmentregex.name=Anhangs-Namen Vergleichen (Regulärer Ausdruck)
 filtaquilla.javascript.name=JavaScript
 filtaquilla.threadheadtag.name="Schlagwort der Ersten Mail der Unterhaltung
 filtaquilla.threadanytag.name=Schlagwort für Thema setzen
