Added localization for buttons (run program, launch file, select file) and dialogs

--- a/locale/en-US/filtaquilla.properties
+++ b/locale/en-US/filtaquilla.properties
@@ -33,3 +33,11 @@ filtaquilla.saveMessageAsFile.name=Save Message as File
 filtaquilla.moveLater.name=Move Later
 filtaquilla.searchBcc.name=Bcc
 filtaquilla.folderName.name=Folder Name
+filtaquilla.selectFolder.title=Select a Folder
+filtaquilla.selectFolder.btn=Pick Folder…
+filtaquilla.editJavascript=Edit JavaScript…
+filtaquilla.launcher.select=Select a File…
+filtaquilla.launcher.launch=Launch the File!
+filtaquilla.runProgram.select=Select a Program…
+filtaquilla.runProgram.title=Select a Program to run
+
