--- a/locale/de/filtaquilla.properties
+++ b/locale/de/filtaquilla.properties
@@ -33,3 +33,10 @@ filtaquilla.saveMessageAsFile.name=Nachricht als Datei speichern
 filtaquilla.moveLater.name=Später verschieben
 filtaquilla.searchBcc.name=Blindkopie (Bcc)
 filtaquilla.folderName.name=Verzeichnisname
+filtaquilla.selectFolder.title=Verzeichnis auswählen
+filtaquilla.selectFolder.btn=Verzeichnis 
+filtaquilla.editJavascript=JavaScript editieren…
+filtaquilla.launcher.select=Datei auswählen…
+filtaquilla.launcher.launch=Datei ausführen!
+filtaquilla.runProgram.select=Programm auswählen…
+filtaquilla.runProgram.title=Wählen Sie ein Programm das ausgeführt werden soll
