Fixed non-working localization routine

--- a/locale/de/filtaquilla.properties
+++ b/locale/de/filtaquilla.properties
@@ -34,7 +34,7 @@ filtaquilla.moveLater.name=Später verschieben
 filtaquilla.searchBcc.name=Blindkopie (Bcc)
 filtaquilla.folderName.name=Verzeichnisname
 filtaquilla.selectFolder.title=Verzeichnis auswählen
-filtaquilla.selectFolder.btn=Verzeichnis 
+filtaquilla.selectFolder.btn=Verzeichnis wählen…
 filtaquilla.editJavascript=JavaScript editieren…
 filtaquilla.launcher.select=Datei auswählen…
 filtaquilla.launcher.launch=Datei ausführen!
