--- a/locale/en-US/prefwindow.dtd
+++ b/locale/en-US/prefwindow.dtd
@@ -50,6 +50,8 @@
 <!ENTITY supportPage_desc "This Page describes the different actions and conditions you can add to mail filters with FiltaQuilla.">
 <!ENTITY quickFiltersPage "Get quickFilters!">
 <!ENTITY quickFiltersPage_desc "Download this awesome Add-on to turbo-charge your filtering. quickFilters makes filter definition and management a breeze.">
+<!ENTITY supportFiltaquilla "Support FiltaQuilla">
+<!ENTITY supportFiltaquilla_desc "FiltaQuilla is free to download and use - the best way to support the development team is by buying a license for quickFilters Pro. It is the most awesome filter extensions for managing and creating filters in a super convenient way.">
 <!-- search terms -->
 <!ENTITY checkSearchBccEnabled.label "Bcc">
 <!ENTITY checkSearchBccEnabled.accesskey "B">
