locale: de: Fix label of threadanytag search term
The old translation said "Set tag for thread" which is bogus.

Signed-off-by: Konrad Gräfe <konradgraefe@aol.com>

--- a/locale/de/filtaquilla.properties
+++ b/locale/de/filtaquilla.properties
@@ -17,7 +17,7 @@ filtaquilla.headerregex.name=Header Vergleichen (Regulärer Ausdruck)
 filtaquilla.attachmentregex.name=Anhangs-Namen Vergleichen (Regulärer Ausdruck)
 filtaquilla.javascript.name=JavaScript
 filtaquilla.threadheadtag.name="Schlagwort der Ersten Mail der Unterhaltung
-filtaquilla.threadanytag.name=Schlagwort für Thema setzen
+filtaquilla.threadanytag.name=Schlagwort der Mails der Unterhaltung
 filtaquilla.filters=Filter
 filtaquilla.inherit=Übernehmen
 filtaquilla.enabled=Aktiv
