fixed a typo (removed extra double quotes)

--- a/locale/de/filtaquilla.properties
+++ b/locale/de/filtaquilla.properties
@@ -16,7 +16,7 @@ filtaquilla.subjectregex.name=Betreff Vergleichen (Regulärer Ausdruck)
 filtaquilla.headerregex.name=Header Vergleichen (Regulärer Ausdruck)
 filtaquilla.attachmentregex.name=Anhangs-Namen Vergleichen (Regulärer Ausdruck)
 filtaquilla.javascript.name=JavaScript
-filtaquilla.threadheadtag.name="Schlagwort der Ersten Mail der Unterhaltung
+filtaquilla.threadheadtag.name=Schlagwort der Ersten Mail der Unterhaltung
 filtaquilla.threadanytag.name=Schlagwort der Mails der Unterhaltung
 filtaquilla.filters=Filter
 filtaquilla.inherit=Übernehmen
