--- a/locale/de/prefwindow.dtd
+++ b/locale/de/prefwindow.dtd
@@ -65,6 +65,6 @@
 <!ENTITY checkJavascriptEnabled.accesskey "J">
 <!ENTITY checkSubjectRegexEnabled.label "Betreff vergleichen (Regulärer Ausdruck)">
 <!ENTITY checkSubjectRegexEnabled.accesskey "V">
-<!ENTITY checkThreadAnyTagEnabled.label "Schlagwort der Mails der Unterhaltung">
+<!ENTITY checkThreadAnyTagEnabled.label "Schlagwort aller Mails der Unterhaltung">
 <!ENTITY checkThreadAnyTagEnabled.accesskey "T">
 <!ENTITY helpFeatureTip "Mehr Informationen über diese Funktion">
