beautified code; added missing translations (replaced via babelzilla)

--- a/locale/nl/filtaquilla.properties
+++ b/locale/nl/filtaquilla.properties
@@ -33,3 +33,10 @@ filtaquilla.saveMessageAsFile.name=Bericht als bestand opslaan
 filtaquilla.moveLater.name=Later verplaatsen
 filtaquilla.searchBcc.name=Bcc
 filtaquilla.folderName.name=Mapnaam
+filtaquilla.selectFolder.title=Select a Folder
+filtaquilla.selectFolder.btn=Pick Folder…
+filtaquilla.editJavascript=Edit JavaScript…
+filtaquilla.launcher.select=Select a File…
+filtaquilla.launcher.launch=Launch the File!
+filtaquilla.runProgram.select=Select a Program…
+filtaquilla.runProgram.title=Select a Program to run
