--- a/locale/sv-SE/filtaquilla.properties
+++ b/locale/sv-SE/filtaquilla.properties
@@ -33,3 +33,10 @@ filtaquilla.saveMessageAsFile.name=Spara meddelande som fil
 filtaquilla.moveLater.name=Flytta senare
 filtaquilla.searchBcc.name=Hemlig kopia
 filtaquilla.folderName.name=Mappnamn
+filtaquilla.selectFolder.title=Select a Folder
+filtaquilla.selectFolder.btn=Pick Folder…
+filtaquilla.editJavascript=Edit JavaScript…
+filtaquilla.launcher.select=Select a File…
+filtaquilla.launcher.launch=Launch the File!
+filtaquilla.runProgram.select=Select a Program…
+filtaquilla.runProgram.title=Select a Program to run
