--- a/locale/de/filtaquilla.properties
+++ b/locale/de/filtaquilla.properties
@@ -40,3 +40,5 @@ filtaquilla.launcher.select=Datei auswählen…
 filtaquilla.launcher.launch=Datei ausführen!
 filtaquilla.runProgram.select=Programm auswählen…
 filtaquilla.runProgram.title=Wählen Sie ein Programm das ausgeführt werden soll
+filtaquilla.playSound=Klang abspielen
+filtaquilla.tone.select=Klangdatei auswählen…
