--- a/locale/en-US/filtaquilla.properties
+++ b/locale/en-US/filtaquilla.properties
@@ -40,4 +40,5 @@ filtaquilla.launcher.select=Select a File…
 filtaquilla.launcher.launch=Launch the File!
 filtaquilla.runProgram.select=Select a Program…
 filtaquilla.runProgram.title=Select a Program to run
-
+filtaquilla.playSound=Play Sound
+filtaquilla.tone.select=Select a Sound File…
