--- a/locale/ru/filtaquilla.properties
+++ b/locale/ru/filtaquilla.properties
@@ -40,6 +40,5 @@ filtaquilla.launcher.select=Выберите файл…
 filtaquilla.launcher.launch=Запустить файл!
 filtaquilla.runProgram.select=Выберите a программу…
 filtaquilla.runProgram.title=Выберите Программу для запуска
-filtaquilla.playSound=Play Sound
-filtaquilla.tone.select=Select a Sound File…
-
+filtaquilla.playSound=Проиграть звук
+filtaquilla.tone.select=Выберите звуковой файл…
