--- a/locale/ru/prefwindow.dtd
+++ b/locale/ru/prefwindow.dtd
@@ -42,7 +42,7 @@
 <!ENTITY checkSubjectSuffixEnabled.accesskey "X">
 <!ENTITY checkJavascriptActionBodyEnabled.label "Javascript действие с телом письма">
 <!ENTITY checkJavascriptActionBodyEnabled.accesskey "Y">
-<!ENTITY checkTonequillaEnabled.label "Play Sound (Tonequilla)">
+<!ENTITY checkTonequillaEnabled.label "Проиграть звук (Tonequilla)">
 <!ENTITY optionsIntro "Включите желаемые пункты для диалогового окна «Правила фильтра». Перезапустите после изменения.">
 <!ENTITY filterActions "Действия фильтра">
 <!ENTITY searchTerms "Темины поиска">
