case insensitive regexp match, body regexp on work

--- a/locale/en-US/filtaquilla.properties
+++ b/locale/en-US/filtaquilla.properties
@@ -14,6 +14,7 @@ filtaquilla.trainasgood.name=Train As Good
 filtaquilla.mustSelectFolder=You must select a target folder
 filtaquilla.subjectregex.name=Subject Regex Match
 filtaquilla.headerregex.name=Header Regex Match
+filtaquilla.bodyregex.name=Body Regex Match
 filtaquilla.attachmentregex.name=Attachment Name Regex Match
 filtaquilla.javascript.name=Javascript
 filtaquilla.threadheadtag.name=Tag of Thread Head
