add regex flags: c - case-sensitive search, a - alert in case of match; extract callback function into reusable object

--- a/locale/en-US/filtaquilla.properties
+++ b/locale/en-US/filtaquilla.properties
@@ -15,6 +15,7 @@ filtaquilla.mustSelectFolder=You must select a target folder
 filtaquilla.subjectregex.name=Subject Regex Match
 filtaquilla.headerregex.name=Header Regex Match
 filtaquilla.bodyregex.name=Body Regex Match
+filtaquilla.subjectbodyregex.name=Body OR Subject Regex Match
 filtaquilla.attachmentregex.name=Attachment Name Regex Match
 filtaquilla.javascript.name=Javascript
 filtaquilla.threadheadtag.name=Tag of Thread Head
