--- a/locale/en-US/prefwindow.dtd
+++ b/locale/en-US/prefwindow.dtd
@@ -45,6 +45,8 @@
 <!ENTITY checkJavascriptActionBodyEnabled.accesskey "Y">
 <!ENTITY checkBodyRegexEnabled.label "Body Regexp match">
 <!ENTITY checkBodyRegexEnabled.accesskey "B">
+<!ENTITY checkSubjectBodyRegexEnabled.label "Body OR Subject Regexp match">
+<!ENTITY checkSubjectBodyRegexEnabled.accesskey "B">
 <!ENTITY checkTonequillaEnabled.label "Play Sound (Tonequilla)">
 <!ENTITY optionsIntro "Enable all items that you want to have available in the 'filter rules' dialog. Restart after changes.">
 <!ENTITY filterActions "Filter Actions">
