--- a/locale/ru/filtaquilla.properties
+++ b/locale/ru/filtaquilla.properties
@@ -38,7 +38,7 @@ filtaquilla.selectFolder.btn=Выбрать папку…
 filtaquilla.editJavascript=Редактировать JavaScript…
 filtaquilla.launcher.select=Выберите файл…
 filtaquilla.launcher.launch=Запустить файл!
-filtaquilla.runProgram.select=Выберите a программу…
+filtaquilla.runProgram.select=Выберите программу…
 filtaquilla.runProgram.title=Выберите Программу для запуска
 filtaquilla.playSound=Проиграть звук
 filtaquilla.tone.select=Выберите звуковой файл…
