--- a/locale/nl/filtaquilla.properties
+++ b/locale/nl/filtaquilla.properties
@@ -14,6 +14,7 @@ filtaquilla.trainasgood.name=Trainen als gewenst
 filtaquilla.mustSelectFolder=U dient een doelmap op te geven
 filtaquilla.subjectregex.name=Overeenkomst reguliere expressie onderwerp
 filtaquilla.headerregex.name=Overeenkomst reguliere expressie  header
+filtaquilla.bodyregex.name=Overeenkomst reguliere expressie body
 filtaquilla.attachmentregex.name=RegEx-overeenkomst bijlagenaam
 filtaquilla.javascript.name=Javascript
 filtaquilla.threadheadtag.name=Label van discussieheader
