--- a/locale/sv-SE/filtaquilla.properties
+++ b/locale/sv-SE/filtaquilla.properties
@@ -14,6 +14,7 @@ filtaquilla.trainasgood.name=Träna som bra
 filtaquilla.mustSelectFolder=Du måste markera en målmapp
 filtaquilla.subjectregex.name=Regex-matchning för ämne
 filtaquilla.headerregex.name=Regex-matchning för sidhuvud
+filtaquilla.bodyregex.name=Regex-matchning för body
 filtaquilla.attachmentregex.name=Regexmatchning i bilagans namn
 filtaquilla.javascript.name=JavaScript
 filtaquilla.threadheadtag.name=Tagg för trådsidhuvudet
