--- a/locale/ru/filtaquilla.properties
+++ b/locale/ru/filtaquilla.properties
@@ -14,6 +14,7 @@ filtaquilla.trainasgood.name=Предположительно хорошее
 filtaquilla.mustSelectFolder=Выберите целевую папку
 filtaquilla.subjectregex.name=Совпадение с регэкспом темы
 filtaquilla.headerregex.name=Совпадение с регэкспом заголовка
+filtaquilla.bodyregex.name=Совпадение с регэкспом body
 filtaquilla.attachmentregex.name=Совпадение с регэкспом вложения
 filtaquilla.javascript.name=Javascript
 filtaquilla.threadheadtag.name=Тег - Заголовок нити
